test fix iframe on ios

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -633,10 +633,10 @@ iframe, object, embed {
     max-width: 100%!important;
     max-height: 300px!important;
   }
-  iframe, object, embed {
+  /*iframe, object, embed {
     max-width: 100%!important;
     max-height: 300px!important;
-  }
+  }*/
 }
 
 
